# example-connectrpc-worker

./: Cargo.toml  README.md  build.rs  wrangler.toml
clients/clock-cli/: Cargo.toml  build.rs
clients/clock-cli/src/: main.rs
clients/echo-cli/: Cargo.toml  build.rs
clients/echo-cli/src/: main.rs
clients/heartbeat-cli/: Cargo.toml  build.rs
clients/heartbeat-cli/src/: main.rs
integration-tests/: buf.gen.yaml  package-lock.json  package.json  tsconfig.json
integration-tests/tests/: bidi-helpers.ts  clock.test.ts  echo.test.ts  greet.test.ts  heartbeat.test.ts  helpers.ts  mf.ts  reverse.test.ts  smoke.test.ts  todo.test.ts
migrations/: 0001_init_todos.sql
proto/workers/clock/v1/: clock.proto
proto/workers/echo/v1/: echo.proto
proto/workers/greet/v1/: greet.proto
proto/workers/heartbeat/v1/: heartbeat.proto
proto/workers/reverse/v1/: reverse.proto
proto/workers/todo/v1/: todo.proto
src/: clock.rs  echo.rs  heartbeat.rs  lib.rs  middleware.rs  routes.rs  todo.rs
