[package]
name = "workers-connectrpc"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Connor Hindley <conn.hindley@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http", "d1"] }
worker-macros = { version = "0.8", features = ["http"] }

# ConnectRPC core — disable the default `zstd` and `streaming` features which
# pull in C bindings / platform bits that don't build on wasm32-unknown-unknown.
# Keep `gzip` (pure-Rust via miniz_oxide) for response compression.
connectrpc = { version = "0.3", default-features = false, features = ["gzip"] }

# Protobuf runtime used by generated code.
buffa = { version = "0.3", features = ["json"] }
buffa-types = { version = "0.3", features = ["json"] }

# Serde derives are required by the generated JSON codec.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP types.
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = { version = "1.5", features = ["serde"] }

# Async plumbing.
futures = "0.3"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
connectrpc-build = { version = "0.3" }
